feat: use http-only cookie for transfer auth token
