# front/swagger.json
@@ -1,10 +1,39 @@
 {
   "openapi": "3.0.1",
   "info": {
-    "title": "Demo API",
+    "title": "Tuna API",
     "version": "v1"
   },
   "paths": {
+    "/account/info": {
+      "get": {
+        "tags": [
+          "Account"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/MyAccountInfoDto"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MyAccountInfoDto"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/MyAccountInfoDto"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/auth/login-or-register": {
       "post": {
         "tags": [
@@ -88,6 +117,16 @@
             "nullable": true
           },
           "password": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "MyAccountInfoDto": {
+        "type": "object",
+        "properties": {
+          "name": {
             "type": "string",
             "nullable": true
           }
