# server/Server.Api/Models/MyAccountInfoDto.cs
@@ -1,0 +1,3 @@
+namespace Server.Api.Models;
+
+public record MyAccountInfoDto(string name);
